              operators, not just less-than (<) as before.
            - Sn and orderedSn now use the new public type PermSn<...> (see
              below), which now supports both iteration and array-like access.
            - Classes Perm<2,3> now have a type alias Code2 (which is identical
              to Code), to help with generic programming.
        Enum PermCodeType:
            - This is now a scoped enumeration, for better type safety.
              The old enum constants (e.g., PERM_CODE_IMAGES) have been
              renamed as scoped enum values (e.g., PermCodeType::Images).
              The old names have been kept as deprecated compile-time constants
              in the regina:: namespace.
        Enum PermOrder:
            - New enumeration to represent different ways of ordering
              permutations.
        Class PermSn<n, order>:
            - New type to support Perm<n>::Sn and Perm<n>::orderedSn.  This is
              now a public type, and it now supports both iteration and
              array-like access.
        Struct Unprotected:
            - New C++-only type that allows in-built safety checks to be
              disabled in some specific circumstances.
        Class Rational:
            - New function str().
            - Added a spaceship operator (<=>) for comparisons.
        Class Rotation3D:
            - New class to support floating-point 3-D geometry.
        Class SatAnnulus:
            - Routine attachLST() now checks its preconditions, and throws
              an exception if they fail.
        Class SatBlock:
            - Added a spaceship operator (<=>) for ordering.
              This has the effect of implementing all comparison operators,
              not just less-than (<) as before.
        Class Segment3D:
            - New class to support floating-point 3-D geometry.
        Struct SFSFibre:
            - Added a spaceship operator (<=>) for comparisons.  This has the