@@ -6,14 +6,6 @@
 5040
 3628800
 20922789888000
-1
-2
-6
-24
-120
-720
-362880
-1307674368000
 3
 3
 3
