@@ -40,15 +40,6 @@ print(Perm7.nPerms)
 print(Perm10.nPerms)
 print(Perm16.nPerms)
 
-print(Perm2.nPerms_1)
-print(Perm3.nPerms_1)
-print(Perm4.nPerms_1)
-print(Perm5.nPerms_1)
-print(Perm6.nPerms_1)
-print(Perm7.nPerms_1)
-print(Perm10.nPerms_1)
-print(Perm16.nPerms_1)
-
 print(Perm5.imageBits)
 print(Perm6.imageBits)
 print(Perm7.imageBits)
